objects/BBEvent__c.object
<CustomObject>
    <description>Custom Table to store Blueberry Event.</description>
    <fields>
        <fullName>Available_seats__c</fullName>
        <label>Available seats</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enddate__c</fullName>
        <description>End date for the event</description>
        <label>Enddate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventTitle__c</fullName>
        <description>Event title</description>
        <label>EventTitle</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_Session_Capacity__c</fullName>
        <label>Per Session Capacity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registeration_due__c</fullName>
        <description>Due date for registration to the event</description>
        <label>Register Before</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Startdate__c</fullName>
        <description>Start date of event</description>
        <label>Startdate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Archived</fullName>
                    <color>#FF6666</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalRegisterations__c</fullName>
        <description>Count of total registerations</description>
        <label>TotalRegisterations</label>
        <summaryForeignKey>BBEventRegistration__c.BBEventToRegister__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <description>Select the venue</description>
        <inlineHelpText>Venue city</inlineHelpText>
        <label>Venue</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calgary</fullName>
                </value>
                <value>
                    <fullName>Ottawa</fullName>
                </value>
                <value>
                    <fullName>Toronto</fullName>
                </value>
                <value>
                    <fullName>Vancouver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BBEvent</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BBEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Enddate_shouldbeAfterStartdateOnly</fullName>
        <active>true</active>
        <description>End Date of Event can be after start date only</description>
        <errorConditionFormula>Enddate__c   &lt;=   Startdate__c</errorConditionFormula>
        <errorDisplayField>Enddate__c</errorDisplayField>
        <errorMessage>End date cannot be before start date. Please select date which is future to startdate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reg_due_nopast_nolaterStartdate</fullName>
        <active>true</active>
        <description>Registraion due date cannot be past date and cannot be later than start date of session</description>
        <errorConditionFormula>OR(Registeration_due__c  &gt;=  Startdate__c ,Registeration_due__c  &lt; TODAY())</errorConditionFormula>
        <errorDisplayField>Registeration_due__c</errorDisplayField>
        <errorMessage>Registration date cannot be past date and should be before start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Startdate_onlyfuture</fullName>
        <active>true</active>
        <description>Start date can be future dates only</description>
        <errorConditionFormula>Startdate__c  &lt;=  TODAY()</errorConditionFormula>
        <errorDisplayField>Startdate__c</errorDisplayField>
        <errorMessage>Valid Start date will be a future date. Please enter appropriate future date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>twodayeventonly</fullName>
        <active>true</active>
        <description>Event cannot be more than 2 day event</description>
        <errorConditionFormula>Enddate__c  -  Startdate__c  &lt;&gt; 1</errorConditionFormula>
        <errorDisplayField>Enddate__c</errorDisplayField>
        <errorMessage>An Event cannot be more than 2 day. Please update the end date accordingly</errorMessage>
    </validationRules>
</CustomObject>